@@ -1,3 +1,9 @@
+2007-06-18  Nathan Sidwell  <nathan@codesourcery.com>
+
+	* ldlex.l, ldgram.y: Add ALIGNOF.
+	* ldexp.c (exp_print_token, foldname): Likewise.
+	* ld.texinfo: Likewise.
+
 2007-06-18  Alan Modra  <amodra@bigpond.net.au>
 
 	* Makefile.am: Add eelf32_spu.o rule.
